--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -28,6 +28,7 @@ Change Log
     - TextBox test added.
     - Added an overload to GraphicsPort to print a length of a string in a
       specific colour.
+    - Restructured into traditional library folder layout.
 
 
   V0.39 (20091024)
