--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -75,6 +75,7 @@ Change Log
       non-const pointer to its bitmap and a non-const pointer to a Graphics
       object that can draw to the bitmap.
     - Added bitmapdrawing example.
+    - Added gadgetdrawing example.
 
 
   V0.39 (20091024)
