--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -38,7 +38,7 @@ Change Log
       greater than the size of the destination bitmap.
     - GraphicsPort::drawPixel() clips correctly.
     - GraphicsPort::drawXORPixel() clips correctly.
-    - Wrapped DMA_Force and DMA_Copy inside woopsiDmaForce() and woopsiDmaCopy()
+    - Replaced DMA_Force and DMA_Copy with woopsiDmaForce() and woopsiDmaCopy()
       to fix ancient problems with DMA not seeing latest RAM state.
   
   - New Features:
