--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,7 @@ Change Log
     - SDL framebuffer code merged into FrameBuffer class.
     - Added label test.
     - Added button test.
+    - Added DOS batch files to build examples and tests.
 
 
   V0.40 (20091115)
