--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,8 @@ Change Log
     - GraphicsPort::dim() clips properly.
     - BitmapButton::getPreferredDimensions() returns the correct size.
     - AnimButton::getPreferredDimensions() returns the correct size.
+    - Anim button animation continues playing correctly when clicked if
+      disabled.
   
   - New Features:
     - Removed getEditableData() bodge from bitmap classes; all interaction with
