- Real fix for ListBox canvas height/extra pixel problem.  - ListBox raises an action event when double-clicked.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,7 @@ Change Log
     - Woopsi class does not attempt to retrieve system font before it is
       initialised.
     - ListBox canvas height no longer includes extra pixel.
+    - ListBox raises an action event when double-clicked.
   
   
   - New Features:
