--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -32,6 +32,7 @@ Change Log
     - ListBox does not allow horizontal scrolling.
     - Added windowless example project.
     - Added Gadget::isDoubleClick() to check for double-clicks.
+    - Combined various colour members in Gadget class into GadgetColours struct.
 
 
   V0.41 (20091124)
