- Split ListDataItem into ListDataItem and ListBoxListDataItem classes for greater flexibility.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -43,6 +43,8 @@ Change Log
       increase and lower memory usage.
     - FileRequester displays "Loading..." message whilst directories are
       enumerated.
+    - Split ListDataItem into ListDataItem and ListBoxListDataItem classes for
+      greater flexibility.
 
   V0.41 (20091124)
   
