--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -19,6 +19,7 @@ Change Log
     - Template project no longer references Gadget::Rect.
     - MultiLineTextBox redraws and adjusts text position when font is changed.
     - ListBox does not attempt to draw item -1 in list.
+    - PackedFontBase::isCharBlank() returns the correct value.
   
   - New Features:
     - Added packedfonts example.
