--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -26,6 +26,7 @@ Change Log
     - Removed systemFont global; relying on defaultGadgetStyle instead.
     - Removed tinyFont global; Debug class now creates its own instance.
     - TinyFont follows class pattern used by Jeff's PackedFonts.
+    - Graphics::floodFill() no longer gets stuck in an infinite loop.
   
   - New Features:
     - Added packedfonts example.
